css and html basic structure done

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/@tensorflow/tfjs"></script>
     <script src="https://unpkg.com/@tensorflow-models/mobilenet"></script>
     <link rel="stylesheet" type="text/css" href="./static/style.css">
@@ -9,29 +10,35 @@
 </head>
 <body>
     <div class="container">
-        <div class="Header">
-            <ul>
-                <li>AI WebApp</li>
-                <li>Contact Us</li>
-            </ul>
+
+        <div class="header">
+            <div class="logo">AI WEB APP</div>
+            <div class="contact">Contact Us</div>
         </div>
+
         <div class="tittle">
-          <h2>Image Classifier</h2>
+          <div>Image Classifier</div>
         </div>
+
+        <button id="load" class="button">Upload Image</button>
+
           <!-- Add an image that we will use to test -->
         <div class="results">
-            <button>Load Image</button>
-             <img id='img' src="image/imagen.jpg" height="300" width="300s">
-                <h3>Result</h3>
-                <div>
-                    <p>Prediction:</p>
-                    <div>Answer</div>
-                </div>
-                <div>
-                    <p>Probability:</p>
-                    <div>Number</div>
+            <img id='img' src="image/imagen.jpg" height="300" width="300s">
+            <div class="outer-container">
+                <h2>Results:</h2>
+                <div class="container-box">
+                    <div class="inner-container-left">
+                        <div>Prediction:</div>
+                        <div>Probability:</div>
+                    </div>
+                     <div class="inner-container-right">
+                        <div id="Answer">Answer</div>
+                        <div id="percentage">75%</div>
+                     </div>
                 </div>
 
+            </div>
         </div>
     </div>
 
