implementation of machine learning try-03 display inf ready

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                 <h2>Results:</h2>
                 <div class="container-box">
                     <div class="inner-container-left">
-                        <div>Prediction:</div>
-                        <div>Probability:</div>
+                        <div>Prediction:  </div>
+                        <div>Probability: </div>
                     </div>
                      <div class="inner-container-right">
-                        <div id="Answer">Answer</div>
-                        <div id="percentage">75%</div>
+                        <div id="answer">--</div>
+                        <div id="percentage">--</div>
                      </div>
                 </div>
 
