Fixed static folder to server on github

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/@tensorflow/tfjs"></script>
     <script src="https://unpkg.com/@tensorflow-models/mobilenet"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./static/style.css">
     <meta charset="UTF-8">
     <title>Image Classifier</title>
 </head>
@@ -49,6 +49,6 @@
 
 
     <!-- Load index.js after the content of the page -->
-    <script src="index.js"></script>
+    <script src="./static/index.js"></script>
 </body>
 </html>
